fixed some glitches on mobile

--- a/packages/navigate-theme/src/styles/base/_utilities.scss
+++ b/packages/navigate-theme/src/styles/base/_utilities.scss
@@ -377,6 +377,10 @@
 .styles_modalCenter__L9F2w {
   max-width: 100%;
   max-height: 100%;
+
+  @include respond(phone) {
+    overflow: scroll;
+  }
 }
 
 //hotfixes
