--- a/packages/navigate-theme/src/styles/components/_booking-form.scss
+++ b/packages/navigate-theme/src/styles/components/_booking-form.scss
@@ -48,6 +48,12 @@
     &--last {
       width: 53.1%;
       clip-path: polygon(100% 0%, 100% 100%, 100% 100%, 0% 100%, 0 100%, 0% 0%);
+
+      @include respond(phone) {
+        margin-left: 2rem;
+        padding-left: 1.5rem;
+        width: 85.1%;
+      }
     }
   }
 
@@ -122,6 +128,10 @@
 
       @include respond(tablet) {
         grid-template-columns: 55% 38.9%;
+      }
+
+      @include respond(phone) {
+        grid-template-columns: 100%;
       }
 
       & > h3 {
@@ -200,7 +210,7 @@
     position: relative;
 
     & input:checked ~ .booking-form__hidden {
-      max-height: 40rem;
+      max-height: 80rem;
     }
 
     & input:checked ~ .booking-form__plus-holder::after {
@@ -221,6 +231,13 @@
       margin-top: 1.5rem;
       overflow: hidden;
       cursor: pointer;
+
+      @include respond(phone) {
+        height: 8rem;
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 3rem;
+      }
 
       &:nth-child(n + 6) {
         display: none;
@@ -256,6 +273,12 @@
     @include respond(tablet) {
       width: 60%;
     }
+
+    @include respond(phone) {
+      display: flex;
+      justify-content: space-between;
+      width: 100%;
+    }
   }
 
   &__right {
@@ -269,7 +292,10 @@
     }
 
     @include respond(phone) {
-      width: 36%;
+      width: 100%;
+      display: flex;
+      flex-direction: row-reverse;
+      justify-content: space-between;
     }
   }
 
@@ -285,10 +311,19 @@
     @include respond(tablet) {
       width: 9.5rem;
     }
+
+    @include respond(phone) {
+      width: 5rem;
+      grid-template-columns: 50% 50%;
+    }
   }
 
   &__date {
     font-family: Nunito-Black;
+
+    @include respond(phone) {
+      font-size: 1.4rem;
+    }
   }
 
   &__destination {
@@ -300,6 +335,10 @@
     width: 13.5rem;
     height: 0.2rem;
 
+    @include respond(phone) {
+      width: 7.5rem;
+    }
+
     &--soldout {
       background-color: $color-gray-light-2;
     }
@@ -310,6 +349,10 @@
     width: 14.5rem;
     justify-content: space-between;
     align-items: center;
+
+    @include respond(phone) {
+      width: 6.5rem;
+    }
   }
 
   &__dot {
@@ -355,6 +398,10 @@
     @include respond(laptop) {
       width: 57%;
     }
+
+    @include respond(phone) {
+      width: 58%;
+    }
   }
 
   &__original {
@@ -385,6 +432,15 @@
 
     @include respond(tablet) {
       margin-top: 5rem;
+    }
+
+    & > button {
+      @include respond(phone) {
+        width: 21.6rem !important;
+        height: 5rem;
+        font-size: 1.1rem;
+        margin-top: 2rem;
+      }
     }
   }
 
@@ -481,6 +537,10 @@
     & div:nth-child(10),
     & div:nth-child(11) {
       grid-column: 1/3;
+
+      @include respond(phone) {
+        grid-column: 1/-1;
+      }
     }
 
     & div:nth-child(3),
@@ -489,6 +549,10 @@
 
       @include respond(tablet) {
         grid-column: 1;
+      }
+
+      @include respond(phone) {
+        grid-column: 1/-1;
       }
     }
 
@@ -500,6 +564,10 @@
     & div:nth-child(7),
     & div:nth-child(9) {
       grid-column: 2/-1;
+
+      @include respond(phone) {
+        grid-column: 1/-1;
+      }
     }
 
     & div:nth-child(10) {
@@ -526,12 +594,20 @@
       & > input {
         height: 3rem;
         width: 2rem;
+
+        @include respond(phone) {
+          margin-right: 2rem;
+        }
       }
     }
 
     & > button {
       grid-column: 1/3;
       width: 26.5rem;
+
+      @include respond(phone) {
+        width: 21.5rem;
+      }
     }
   }
 
@@ -555,6 +631,10 @@
     @include respond(tablet) {
       width: 36.4rem;
       height: 4.4rem;
+    }
+
+    @include respond(phone) {
+      width: 21.4rem;
     }
 
     &--half {
